Alignment fixed

--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
-.container {
+body {
   display: flex;
-  justify-content: center;
-
-  float: left;
-
-  margin: 20px;
+}
+.container {
+  margin: auto;
+  display: flex;
 }
 .previewPanel {
-  float: right;
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
 
@@ -21,7 +19,8 @@
   object-fit: cover;
 }
 .list {
-  display: inline-flex;
+  display: flex;
+
   flex-direction: column;
   min-width: fit-content;
 }
